--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,7 @@
         <title>hello</title>
 
     </head>
-    <body>
+    <body style="color:blue">
       <h1>welcome to my website</h1>
       <h1>hello,world!</h1>  
       <h2>hello</h2>
