--- a/hello.html
+++ b/hello.html
@@ -4,8 +4,8 @@
         <title>hello</title>
 
     </head>
-    <body style="color:blue">
-      <h1>welcome to my website</h1>
+    <body>
+      <h1>welcome to my website !</h1>
       <h1>hello,world!</h1>  
       <h2>hello</h2>
     </body>
